[gd_scene load_steps=6 format=3 uid="uid://c33egp2i73ov8"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_dhw6o"]
[ext_resource type="FontFile" uid="uid://dykw5hix47w8h" path="res://PeaberryBase.ttf" id="2_pjq64"]
[ext_resource type="Texture2D" uid="uid://bptqlxlon4xur" path="res://Graphics/background/panel-border-010.png" id="3_xmnkp"]
[ext_resource type="AudioStream" uid="uid://bfx6kjpjq0by6" path="res://Sounds/661248__magmadiverrr__video-game-menu-music.mp3" id="4_y36vf"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_whcm6"]
bg_color = Color(0.337255, 0.0627451, 0, 1)

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_dhw6o")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_whcm6")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -173.0
offset_top = -113.0
offset_right = 173.0
offset_bottom = 113.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.00245, 1)
texture = ExtResource("3_xmnkp")

[node name="Menu" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -50.5
offset_right = 35.0
offset_bottom = 50.5
grow_horizontal = 2
grow_vertical = 2

[node name="Start" type="Button" parent="Menu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pjq64")
theme_override_font_sizes/font_size = 25
text = "Start"

[node name="Options" type="Button" parent="Menu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pjq64")
theme_override_font_sizes/font_size = 25
text = " Options "

[node name="Quit" type="Button" parent="Menu"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pjq64")
theme_override_font_sizes/font_size = 25
text = "Quit"

[node name="Options" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Options"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -26.5
offset_top = -33.0
offset_right = 26.5
offset_bottom = 33.0
grow_horizontal = 2
grow_vertical = 2

[node name="Video" type="Button" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pjq64")
theme_override_font_sizes/font_size = 25
text = "Video"

[node name="Audio" type="Button" parent="Options/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_pjq64")
theme_override_font_sizes/font_size = 25
text = "Audio"

[node name="BackFromOptions" type="Button" parent="Options"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -23.0
offset_top = -31.0
offset_right = 23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_pjq64")
theme_override_font_sizes/font_size = 25
text = "Back"

[node name="Video" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Video"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -55.5
offset_top = -43.0
offset_right = 55.5
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2

[node name="FullScreen" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_pjq64")
theme_override_font_sizes/font_size = 25
text = "Fullscreen"

[node name="Borderless" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_pjq64")
theme_override_font_sizes/font_size = 25
text = "Borderless"

[node name="VSync" type="Label" parent="Video/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_pjq64")
theme_override_font_sizes/font_size = 25
text = "VSync"

[node name="Checks" type="VBoxContainer" parent="Video/HBoxContainer"]
layout_mode = 2

[node name="FullScreen" type="CheckBox" parent="Video/HBoxContainer/Checks"]
layout_mode = 2

[node name="Borderless" type="CheckBox" parent="Video/HBoxContainer/Checks"]
layout_mode = 2

[node name="VSync" type="CheckBox" parent="Video/HBoxContainer/Checks"]
layout_mode = 2

[node name="BackFromVideo" type="Button" parent="Video"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -23.0
offset_top = -31.0
offset_right = 23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_pjq64")
theme_override_font_sizes/font_size = 25
text = "Back"

[node name="Audio" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Audio"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -136.5
offset_top = -43.0
offset_right = 136.5
offset_bottom = 43.0
grow_horizontal = 2
grow_vertical = 2

[node name="Labels" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2

[node name="Master" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_pjq64")
theme_override_font_sizes/font_size = 25
text = "Master"

[node name="Music" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_pjq64")
theme_override_font_sizes/font_size = 25
text = "Music"

[node name="SoundFX" type="Label" parent="Audio/HBoxContainer/Labels"]
layout_mode = 2
size_flags_vertical = 6
theme_override_fonts/font = ExtResource("2_pjq64")
theme_override_font_sizes/font_size = 25
text = "Sound FX"

[node name="Sliders" type="VBoxContainer" parent="Audio/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Master" type="HSlider" parent="Audio/HBoxContainer/Sliders"]
layout_mode = 2
size_flags_vertical = 7
max_value = 1.0
step = 0.001

[node name="Music" type="HSlider" parent="Audio/HBoxContainer/Sliders"]
layout_mode = 2
size_flags_vertical = 7
max_value = 1.0
step = 0.001

[node name="SoundFX" type="HSlider" parent="Audio/HBoxContainer/Sliders"]
layout_mode = 2
size_flags_vertical = 7
max_value = 1.0
step = 0.001

[node name="BackFromAudio" type="Button" parent="Audio"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -23.0
offset_top = -31.0
offset_right = 23.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("2_pjq64")
theme_override_font_sizes/font_size = 25
text = "Back"

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_y36vf")
volume_db = -10.0
autoplay = true
bus = &"Music"

[connection signal="pressed" from="Menu/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Menu/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Menu/Quit" to="." method="_on_quit_pressed"]
[connection signal="pressed" from="Options/VBoxContainer/Video" to="." method="_on_video_pressed"]
[connection signal="pressed" from="Options/VBoxContainer/Audio" to="." method="_on_audio_pressed"]
[connection signal="pressed" from="Options/BackFromOptions" to="." method="_on_back_from_options_pressed"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/FullScreen" to="." method="_on_full_screen_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/Borderless" to="." method="_on_borderless_toggled"]
[connection signal="toggled" from="Video/HBoxContainer/Checks/VSync" to="." method="_on_v_sync_toggled"]
[connection signal="pressed" from="Video/BackFromVideo" to="." method="_on_back_from_video_pressed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Sliders/Master" to="." method="_on_master_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Sliders/Music" to="." method="_on_music_value_changed"]
[connection signal="value_changed" from="Audio/HBoxContainer/Sliders/SoundFX" to="." method="_on_sound_fx_value_changed"]
[connection signal="pressed" from="Audio/BackFromAudio" to="." method="_on_back_from_audio_pressed"]
